--- a/src/Comps/List.css
+++ b/src/Comps/List.css
@@ -5,6 +5,10 @@
     font-family: 'Kanit', sans-serif;
 }
 
+button {
+    cursor: pointer;
+}
+
 .reminder-container {
     border-bottom: 1px solid rgb(215, 214, 214);
     margin-top: 1.5rem;
